Create views/orders.py, Update server/app/. Исправлены мелкие ошибки. Добавлены GET запросы, связанные с заказами
