# server/app/swagger.yml
@@ -194,6 +194,13 @@ paths:
     get:
       summary: Получить пиццу по id
       operationId: server.app.views.pizzas.get_pizza_by_id
+      parameters:
+      - name: id
+        in: path
+        description: ID пиццы
+        required: true
+        schema:
+          type: integer
       responses:
         '200':
           description: OK
@@ -214,13 +221,11 @@ paths:
           content:
             'application/json':
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/CartItemGet'
+                $ref: '#/components/schemas/CartGet'
       security:
       - jwt: []
     post:
-      summary: Добавить объект в корзину
+      summary: Добавить элемент в корзину
       operationId: server.app.views.carts.add_item_to_cart
       requestBody:
         description: JSON объект объекта корзины
@@ -228,37 +233,102 @@ paths:
         content:
           'application/json':
             schema:
-              $ref: '#/components/schemas/CartItemPost'
+              $ref: '#/components/schemas/CartItem'
       responses:
         '204':
           description: Объект успешно добавлен в корзину
       security:
         - jwt: []
+  /carts/{item_id}:
     patch:
-      summary: Добавить объект в корзину
+      summary: Обновить элемент корзины
       operationId: server.app.views.carts.update_item_in_cart
+      parameters:
+      - name: item_id
+        in: path
+        description: ID элемента корзины
+        required: true
+        schema:
+          type: integer
       requestBody:
         description: JSON объект объекта корзины
         required: true
         content:
           'application/json':
             schema:
-              $ref: '#/components/schemas/CartItemPatch'
+              $ref: '#/components/schemas/CartItem'
       responses:
         '204':
           description: Объект корзины успешно обновлён
       security:
         - jwt: []
-  /carts/{id}:
+  /carts/{item_id}:
     delete:
       summary: Удалить объект из корзины
       operationId: server.app.views.carts.remove_item_from_cart
+      parameters:
+      - name: item_id
+        in: path
+        description: ID элемента корзины
+        required: true
+        schema:
+          type: integer
       responses:
         '200':
           description: Объект успешно удалён из корзины
       security:
         - jwt: []
-    
+  # ВСЕ ПУТИ, СВЯЗАННЫЕ
+  # С ТАБЛИЦЕЙ Order И OrderItem
+  /orders:
+    get:
+      summary: Получить страницу заказов по указанным параметрам
+      operationId: server.app.views.orders.get_orders_page
+      parameters:
+        - name: offset
+          description: Число, которое нужно отступить от начала таблицы
+          in: query
+          schema:
+            type: integer
+            minimum: 0
+        - name: limit
+          description: Максимальное число заказов в возвращаемой странице
+          in: query
+          schema:
+            type: integer
+            minimum: 1
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Order'
+
+      security:
+      - jwt: []
+  /orders/{id}:
+    get:
+      summary: Получить заказ по id
+      operationId: server.app.views.orders.order_by_id
+      parameters:
+      - name: id
+        in: path
+        description: ID заказа
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/Order'
+      security:
+      - jwt: []
                 
 
 # КОМПОНЕНТЫ ЗАПРОСОВ
@@ -266,7 +336,7 @@ components:
   # Схемы параметров запроса или ответа
   schemas:
     # Схема объекта корзины
-    CartItemPost:
+    CartItem:
       type: object
       properties:
         pizza_id:
@@ -279,37 +349,11 @@ components:
         size:
           type: integer
           description: Размер пиццы (0 == small, 1 == medium, 2 == large)
-          minimum: 0
+          enum: [0, 1, 2]
         dough:
           type: integer
           description: Тип теста пиццы (0 == thin, 1 == classic)
-          minimum: 0
-      required:
-        - pizza_id
-    
-    CartItemPatch:
-      type: object
-      properties:
-        item_id:
-          type: integer
-          description: id объекта корзины, который нужно обновить
-        pizza_id:
-          type: integer
-          description: id пиццы, которой соответствует этот объект
-        quantity:
-          type: integer
-          description: Количество заказанных пицц
-          minimum: 1
-        size:
-          type: integer
-          description: Размер пиццы (0 == small, 1 == medium, 2 == large)
-          minimum: 0
-        dough:
-          type: integer
-          description: Тип теста пиццы (0 == thin, 1 == classic)
-          minimum: 0
-      required:
-        - item_id
+          enum: [0, 1]
 
     CartItemGet:
       type: object
@@ -334,11 +378,11 @@ components:
         size:
           type: string
           description: Размер пиццы (small, medium, large)
-          minimum: 0
+          enum: [small, medium, large]
         dough:
           type: string
           description: Тип теста пиццы (thin, classic)
-          minimum: 0
+          enum: [thin, classic]
       required:
         - id
         - pizza_id
@@ -347,6 +391,18 @@ components:
         - quantity
         - size
         - dough
+    
+    # Схема корзины
+    CartGet:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: Уникальный ID корзины
+        cart_items:
+          type: array
+          items:
+            $ref: '#/components/schemas/CartItemGet'
 
     # Схема данных о пицце
     Pizza:
@@ -403,6 +459,56 @@ components:
     # Схема токена
     Token:
       type: string
+
+    # Схема элемента заказа
+    OrderItem:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: Уникальный ID элемента заказа
+        pizza_id:
+          type: integer
+          description: id пиццы, которой соответствует этот элемент
+        pizza_name:
+          type: string
+          description: Название пиццы
+        total_price:
+          type: number
+          format: float
+          description: Итоговая цена элемента (количество уже учтено)
+        quantity:
+          type: integer
+          description: Количество заказанных пицц
+          minimum: 1
+        size:
+          type: string
+          description: Размер пиццы (small, medium, large)
+          enum: [small, medium, large]
+        dough:
+          type: string
+          description: Тип теста пиццы (thin, classic)
+          enum: [thin, classic]
+      required:
+        - id
+        - pizza_id
+        - pizza_name
+        - total_price
+        - quantity
+        - size
+        - dough
+    
+    # Схема заказа
+    Order:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: Уникальный ID заказа
+        order_items:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderItem'
   
   # Универсальные ответы от сервера
   responses:
